discussion/kv_engine/165105/165105_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49207: Set cas on temp items

Change-Id: Iff7b9118f6839b7d7590e189c46c6650385c3dff

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-04 21:47:27.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-04 22:04:58.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35307/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35307/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41580/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/vbucket.cc(3811): error C2065: "vb": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41580/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13825/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3811:15: error: use of undeclared identifier "vb" [clang-diagnostic-error]
    v->setCas(vb.nextHLCCas());
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13825/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: use of undeclared identifier "vb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13825/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14601/ : FAILURE

Compile error at [2021-11-04T21:50:49.809Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14601/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3458/ : FAILURE

Compile error at [2021-11-04T21:50:18.464Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3458/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15439/ : FAILURE

Compile error at [2021-11-04T21:53:13.680Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15722/ : FAILURE

Compile error at [2021-11-04T22:00:39.478Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15722/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16407/ : FAILURE

Compile error at [2021-11-04T21:56:44.747Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16407/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23777/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3530/ : FAILURE

Compile error at [2021-11-04T22:03:45.934Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/vbucket.cc:3811:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3530/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12627/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
